--- a/remisya-registro/src/main/resources/application.properties
+++ b/remisya-registro/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL=DEBUG	
 logging.level.org.hibernate.type=TRACE
+
+#Agregado
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
