--- a/remisya-registro/src/main/resources/application.properties
+++ b/remisya-registro/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url = jdbc:mysql://localhost:3306/remisapp
 spring.datasource.username = root
-spring.datasource.password = 12345678
+spring.datasource.password = 
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -10,8 +10,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
-logging.level.org.hibernate.SQL=DEBUG	
-logging.level.org.hibernate.type=TRACE
+# logging.level.org.hibernate.SQL=DEBUG	
+# logging.level.org.hibernate.type=TRACE
 
 #Agregado
 spring.jpa.show-sql=true
