--- a/remisya-registro/src/main/resources/application.properties
+++ b/remisya-registro/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.url = jdbc:mysql://localhost:3306/remisapp
 spring.datasource.username = root
-spring.datasource.password = 
+spring.datasource.password = 12345678
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
