--- a/RemisYa/angular.json
+++ b/RemisYa/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["sweetalert2"],
             "outputPath": "dist/remis-ya",
             "index": "src/index.html",
             "main": "src/main.ts",
