--- a/remisya-registro/pom.xml
+++ b/remisya-registro/pom.xml
@@ -89,6 +89,24 @@
 	  <artifactId>javax.persistence</artifactId>
 	  <version>2.1.0</version>
 	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.commons</groupId>
+	  <artifactId>commons-lang3</artifactId>
+	  <version>3.12.0</version>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>io.jsonwebtoken</groupId>
+	  <artifactId>jjwt</artifactId>
+	  <version>0.9.1</version>
+	  <type>jar</type>
+	 </dependency>
+	 <dependency>
+	  <groupId>jakarta.validation</groupId>
+	  <artifactId>jakarta.validation-api</artifactId>
+	  <version>2.0.2</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
