--- a/remisya-registro/pom.xml
+++ b/remisya-registro/pom.xml
@@ -54,7 +54,24 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+                
+                   <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
+                <dependency>
+                     <groupId>javax.xml.bind</groupId>
+                     <artifactId>jaxb-api</artifactId>
+                       <version>2.3.0</version>
+                </dependency>
+                    <!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+                <dependency>
+                   <groupId>io.jsonwebtoken</groupId>
+                   <artifactId>jjwt</artifactId>
+                    <version>0.9.1</version>
+                </dependency>
+                <dependency>
+                     <groupId>org.springframework.boot</groupId>
+                     <artifactId>spring-boot-starter-security</artifactId>
+                     </dependency>
+               	<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
@@ -101,6 +118,7 @@
 	  <version>0.9.1</version>
 	  <type>jar</type>
 	 </dependency>
+         
 	 <dependency>
 	  <groupId>jakarta.validation</groupId>
 	  <artifactId>jakarta.validation-api</artifactId>
