--- a/RemisYa/package.json
+++ b/RemisYa/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "bootstrap-grid-only-css": "^4.1.3",
+    "ngx-paypal": "^10.1.0",
+    "ngx-spinner": "^14.0.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.6.5",
     "tslib": "^2.3.0",
